wrapping loader into a custom directive, positioning correctly on media-gallery page, renaming listening to media-gallery (mostly)

--- a/app/styles/partials/_loader.scss
+++ b/app/styles/partials/_loader.scss
@@ -9,8 +9,9 @@ $color-s: $accent-color2;
 
 
 div.loader-container {
-    position: absolute;
+    // position: absolute;
     width: 100%;
+    margin: 0 auto;
 }
 
 
